fixed unable to rotate when announce is visible

--- a/public/src/game/announce/announce.less
+++ b/public/src/game/announce/announce.less
@@ -1,3 +1,7 @@
+.announce {
+  // http://stackoverflow.com/questions/1009753/pass-mouse-events-through-absolutely-positioned-element
+  pointer-events:none;
+}
 
 .announce-red{
   color:red;
